--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         with:
             host: 34.227.161.240
             username: ubuntu
-            password: ${{ secrets.PRIVATE_SSH_KEY }}
+            key: ${{ secrets.PRIVATE_SSH_KEY }}
             port: 22
             script: whoami
 
