--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,12 +21,7 @@ jobs:
             username: ubuntu
             key: ${{ secrets.PRIVATE_SSH_KEY }}
             port: 22
-            script: |
-             cd CiCdchecks25
-             git pull 
-             npm install
-             npm run build 
-             npm run start 
+            script: ./deploy.sh
 
 
     
